--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.2.8",
     "@builder.io/qwik-city": "^1.2.8",
+    "@mdi/js": "^7.2.96",
     "@types/eslint": "8.44.1",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
